--- a/memorable-water-bottle/package.json
+++ b/memorable-water-bottle/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-world-tour",
+  "name": "memorable-water-bottle",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "surge": "^0.23.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
