--- a/es6-moudule-overview/package.json
+++ b/es6-moudule-overview/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-world-tour",
+  "name": "es6-moudule-overview",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "surge": "^0.23.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
